--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^6.5.16",
-    "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/native": "^6.1.7",
-    
+    "@react-navigation/native-stack": "^6.9.22",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-bottom-sheet": "^1.0.3",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-reanimated": "^3.8.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-swiper-flatlist": "^3.2.3",
     "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
