--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.22",
@@ -19,12 +20,13 @@
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-bottom-sheet": "^1.0.3",
-    "react-native-gesture-handler": "^2.15.0",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-image-slider-box": "^2.0.7",
-    "react-native-reanimated": "^3.8.0",
+    "react-native-modalize": "^2.1.1",
+    "react-native-reanimated": "^3.6.2",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
