--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.22",
     "expo": "~50.0.8",
+    "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
