--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-bouncy-checkbox": "4.0.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modalize": "^2.1.1",
@@ -28,8 +30,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "tailwind-rn": "^4.2.0",
-    "react-native-bouncy-checkbox": "4.0.0"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
