--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-bouncy-checkbox": "4.0.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-maps": "^1.14.0",
     "react-native-modalize": "^2.1.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-swiper": "^1.6.0",
